fixed overflow when menu is open in mobile view and fixed display of pagination on mobile view

--- a/src/app/movies/movie-browser/movie-list/movie-list.component.css
+++ b/src/app/movies/movie-browser/movie-list/movie-list.component.css
@@ -63,12 +63,24 @@
   .full-screen-layout {
     grid-template-columns: repeat(2, 1fr);
   }
+
+  .pagination /deep/ .ngx-pagination .ng-star-inserted {
+    font-size: 12px;
+  }
+
+  /*.pagination /deep/ .ngx-pagination .pagination-previous.disable,*/
+  /*.pagination /deep/ .ngx-pagination .pagination-next.disable,*/
+  /*.pagination /deep/ .ngx-pagination .pagination-previous,*/
+  /*.pagination /deep/ .ngx-pagination .pagination-next {*/
+  /*  display: none;*/
+  /*}*/
 }
 
 @media screen and (max-width: 660px) {
   .full-screen-layout {
     grid-template-columns: 1fr;
   }
+
 }
 
 .pagination /deep/ .ngx-pagination .pagination-previous.disabled .ng-star-inserted,
